Name:                rev-state
Version:             0.2.0
Synopsis:            Reverse State monad transformer
Description:         It's like the State monad transformer.
                     But Reversed! The state goes backwards.

Homepage:            https://github.com/DanBurton/rev-state#readme
License:             BSD3
License-file:        LICENSE
Author:              Dan Burton
Maintainer:          danburton.email@gmail.com

Category:            Control
Build-type:          Simple
Cabal-version:       >=1.10
tested-with:         GHC == 9.8.1
                   , GHC == 9.6.3
                   , GHC == 9.4.8

Library
  Hs-Source-Dirs:      src
  Exposed-modules:     Control.Monad.Trans.RevState
                     , Control.Monad.RevState.Class
                     , Control.Monad.RevState
  Build-depends:       base>=4.8 && <5.0, mtl==2.*

Test-Suite rev-state-test
  Hs-Source-Dirs: test
  Main-Is:        Main.hs
  Type:           exitcode-stdio-1.0
  Build-Depends:  base, rev-state
